<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="update_graph">Update</string>
    <string name="this_month">This Month</string>
    <string name="app_name">XpenseManager</string>
    <string name="action_settings">Settings</string>
    <string name="str_expense">Expense</string>
    <string name="str_income">Income</string>
    <string name="str_balance">Balance</string>
    <string name="str_Ok">Ok</string>
    <string name="str_authenticate">Authenticate</string>
    <string name="str_newuser">New user? Register now</string>
    <string name="str_register">Register</string>
    <string name="title_activity_tab2">Tab2</string>
    <string name="str_logout">Logout</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_add_data">AddData</string>
    <string name="title_activity_abcd">AddData</string>
    <string name="title_activity_add_data_neg">AddDataNeg</string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="str_usr_name">User Name</string>
    <string name="str_psw_wrd">Password</string>
    <string name="title_activity_summary_screen">SummaryScreen</string>
    <string name="str_amount">Amount</string>
    <string name="str_remarks">Remarks</string>
    <string name="title_activity_view_summary">ViewSummary</string>
    <string name="title_activity_view_summary_host">ViewSummaryHost</string>
    <string name="title_activity_view_summary_expense">ViewSummaryExpense</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_fragment_base">FragmentBaseActivity</string>
    <string name="str_remember">Remember Me</string>
    <string name="str_add_debtt_1" />
    <string name="str_add_debt_1">ADD DEBT</string>
    <string name="str_view_summary_1">VIEW SUMMARY</string>
    <string name="str_add_debt_2">ADD DEBT</string>
    <string name="str_view_summary_2">VIEW SUMMARY</string>
    <string name="str_enter_1">ENTER</string>
    <string name="title_activity_add_debt">AddDebt</string>
    <string name="str_category">str_category</string>
    <string name="str_lbl_category">Category</string>
    <string name="str_name">Name</string>
    <string name="title_activity_view_debt">ViewDebt</string>
    <string name="str_view_debt">VIEW DEBT</string>
    <string name="str_sign_in">Sign In</string>
    <string name="str_sign_up">Sign Up</string>
    <string name="title_activity_donut">DonutActivity</string>
</resources>
