<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="info.vertecs.expensemanager.LoginActivity">

    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:id="@+id/edt_usr_name"
        android:background="#ffc7c7c7"
        android:layout_above="@+id/edt_psw_wrd"
        android:singleLine="true"
        android:layout_centerHorizontal="true"
        android:autoText="false"
        android:hint="@string/str_usr_name" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:singleLine="true"
        android:id="@+id/edt_psw_wrd"
        android:background="#FFC7C7C7"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/edt_usr_name"
        android:layout_alignStart="@+id/edt_usr_name"
        android:layout_marginTop="10dp"
        android:hint="@string/str_psw_wrd"
        android:inputType="textPassword" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_sign_in"
        android:id="@+id/btn_authenticate_login"
        android:height="66dp"
        android:width="270dp"
        android:layout_below="@+id/edt_psw_wrd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="#efad61"
        android:onClick="OnAuthenticate" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_sign_up"
        android:id="@+id/textView4"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"
        android:clickable="true"
        android:onClick="OnRegisterIntent"
        android:typeface="monospace" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/usernew"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_remember"
        android:id="@+id/chk_box_remeber_me"
        android:layout_below="@+id/edt_psw_wrd"
        android:layout_alignLeft="@+id/edt_psw_wrd"
        android:layout_alignStart="@+id/edt_psw_wrd"
        android:checked="false" />

</RelativeLayout>
