<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="info.vertecs.expensemanager.AddDebt"
    android:background="#f5f5f5"
    android:id="@+id/rl_bg_dbt">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="300dp"
        android:background="#ffffff"
        android:id="@+id/rl_fg_dbt"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:id="@+id/edt_amnt_dbt"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/edittext"
            android:layout_marginTop="20dp"
            android:hint="@string/str_amount"
            android:inputType="numberDecimal" />

        <AutoCompleteTextView
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:id="@+id/edt_name_dbt"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/edt_amnt_dbt"
            android:singleLine="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/edittext"
            android:layout_marginTop="20dp"
            android:hint="@string/str_name" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_enter_1"
            android:id="@+id/btn_enter_dbt"
            android:background="#efad61"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            android:layout_above="@+id/btn_enter_dbt"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/str_lbl_category"
            android:id="@+id/txt_lbl_category"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>
</RelativeLayout>
