<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f3f3f3" >


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:background="#000000"
        android:id="@+id/relativeLayout1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/str_expense"
            android:id="@+id/txt_lbl_expense_next_month"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="#f2f2f2"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:id="@+id/txt_expense_next_month"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/txt_lbl_expense_next_month"
            android:layout_toEndOf="@+id/txt_lbl_expense_next_month"
            android:layout_marginLeft="150dp"
            android:layout_marginStart="150dp"
            android:textColor="#f3f3f3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/str_income"
            android:id="@+id/txt_lbl_income_next_month"
            android:layout_below="@+id/txt_lbl_expense_next_month"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="#f2f2f2"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/str_balance"
            android:id="@+id/txt_lbl_bal_next_month"
            android:layout_below="@+id/txt_lbl_income_next_month"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="#f2f2f2"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:id="@+id/txt_income_next_month"
            android:layout_alignTop="@+id/txt_lbl_income_next_month"
            android:layout_alignLeft="@+id/txt_expense_next_month"
            android:layout_alignStart="@+id/txt_expense_next_month"
            android:textColor="#f3f3f3" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:id="@+id/txt_bal_next_month"
            android:layout_below="@+id/txt_income_next_month"
            android:layout_alignLeft="@+id/txt_income_next_month"
            android:layout_alignStart="@+id/txt_income_next_month"
            android:textColor="#f3f3f3"
            android:layout_marginTop="20dp" />

    </RelativeLayout>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/img_btn_next_month"
        android:src="@drawable/button"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="125dp"
        android:background="@null" />

    <Button
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:text="@string/str_add_debt_2"
        android:id="@+id/btn_add_next_month"
        android:background="#efad61"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/btn_view_summary_next_month"
        android:layout_alignStart="@+id/btn_view_summary_next_month"
        android:layout_alignRight="@+id/btn_view_summary_next_month"
        android:layout_alignEnd="@+id/btn_view_summary_next_month" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_view_summary_2"
        android:id="@+id/btn_view_summary_next_month"
        android:layout_below="@+id/btn_add_next_month"
        android:layout_centerHorizontal="true"
        android:background="#efad61"
        android:layout_marginTop="15dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_view_debt"
        android:id="@+id/btn_view_debt_next_mont"
        android:background="#efad61"
        android:width="152dp"
        android:onClick="viewSummary"
        android:layout_below="@+id/btn_view_summary_next_month"
        android:layout_alignRight="@+id/btn_view_summary_next_month"
        android:layout_alignEnd="@+id/btn_view_summary_next_month"
        android:layout_marginTop="20dp"
        android:layout_alignLeft="@+id/btn_view_summary_next_month"
        android:layout_alignStart="@+id/btn_view_summary_next_month" />

</RelativeLayout>