<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fff2f2f2" >


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:background="#ff000000"
        android:id="@+id/relativeLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/str_expense"
            android:id="@+id/textView"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:textColor="#fff2f2f2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:id="@+id/expense_trt"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/textView"
            android:layout_toEndOf="@+id/textView"
            android:layout_marginLeft="150dp"
            android:layout_marginStart="150dp"
            android:layout_marginTop="20dp"
            android:textColor="#F2f2f2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/str_income"
            android:id="@+id/textView3"
            android:layout_below="@+id/textView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:textColor="#f2f2f2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/str_balance"
            android:id="@+id/textView5"
            android:layout_below="@+id/textView3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:textColor="#f2f2f2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:id="@+id/income_trt"
            android:layout_alignTop="@+id/textView3"
            android:layout_alignLeft="@+id/expense_trt"
            android:layout_alignStart="@+id/expense_trt"
            android:textColor="#f2f2f2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Large Text"
            android:id="@+id/balance_trt"
            android:layout_below="@+id/income_trt"
            android:layout_alignLeft="@+id/income_trt"
            android:layout_alignStart="@+id/income_trt"
            android:layout_marginTop="20dp"
            android:textColor="#f2f2f2" />

    </RelativeLayout>

    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/img_trt"
        android:src="@drawable/button"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:background="@null" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Button"
        android:id="@+id/btn_add_debt"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="#efad61" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Button"
        android:id="@+id/btn_view_summary"
        android:layout_below="@+id/btn_add_debt"
        android:layout_centerHorizontal="true"
        android:background="#efad61"
        android:layout_marginTop="15dp" />

</RelativeLayout>